--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,68 @@
-# Python
-.venv/
+# ---------------------------
+# Python / Streamlit (App_v2)
+# ---------------------------
+
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.pyc
-*.pyo
-# macOS
-.DS_Store
-# local data
+*.py[cod]
+*$py.class
+
+# Virtual environments
+venv/
+.venv/
+
+# Streamlit local config & cache
+App_v2/.streamlit/
+.streamlit/
+
+# Local logs & debug dumps
+logs/
+App_v2/logs/
+debug/
+debug_token/
+realtime_debug_dumps/
+maintenance_debug_dumps/
+
+# Local databases (keep production DB external)
+App_v2/database/
+database/
 *.db
-*.sqlite
-# Streamlit
-.streamlit/secrets.toml
+
+# macOS junk
+.DS_Store
+
+# ---------------------------
+# Node / Next.js (web)
+# ---------------------------
+
+web/node_modules/
+web/.next/
+web/.turbo/
+web/.vercel/
+
+# Local env files (never commit secrets)
+web/.env.local
+web/.env.*.local
+
+# npm/yarn logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# ---------------------------
+# Editors / tooling
+# ---------------------------
+
+.vscode/
+.idea/
+*.code-workspace
+
+# ---------------------------
+# Archives / build artifacts
+# ---------------------------
+
+*.zip
+*.tar
+*.tar.gz
+*.tgz
