Make auth verify return 200/401 only; redirect 401 to /login in Caddy

--- a/Caddyfile
+++ b/Caddyfile
@@ -37,6 +37,11 @@ dashboard.rechargealaska.net {
     reverse_proxy app:8501
   }
 
+  handle_errors {
+    @unauth expression {http.error.status_code} == 401
+    redir @unauth /login 302
+  }
+
   # Everything else -> Next.js
   handle {
     reverse_proxy web:3000
