--- a/Caddyfile
+++ b/Caddyfile
@@ -11,8 +11,12 @@ dashboard.rechargealaska.net {
     reverse_proxy web:3000
   }
 
-  # /app is now a Next.js route (not Streamlit)
+  # Protect /app via Next.js auth verify endpoint
   handle /app* {
+    forward_auth web:3000 {
+      uri /api/auth/verify
+      copy_headers Cookie
+    }
     reverse_proxy web:3000
   }
 
@@ -25,7 +29,6 @@ dashboard.rechargealaska.net {
     reverse_proxy app:8501
   }
 
-  # Streamlit’s static assets also need auth
   handle /_stcore/* {
     forward_auth web:3000 {
       uri /api/auth/verify
@@ -34,7 +37,12 @@ dashboard.rechargealaska.net {
     reverse_proxy app:8501
   }
 
-  # Root goes to Next.js (your Next / page can redirect to /app)
+  # Root redirect to /login
+  handle = / {
+    redir /login 302
+  }
+
+  # Everything else -> Next
   handle {
     reverse_proxy web:3000
   }
